# Robotica-2026-I-Equipo-2C-Castro-Morales-Arcila

./: README.md
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/: README.MD
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/Proyectos_RobotStudio/: Control_de_transporte_dentro_del_laboratorio.rar  simulación_de_la_decoración_de_una_torta_virtual.rar
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/models/: herramienta marcador - Parte 1.stl  herramienta marcador - Parte 2.stl
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/src/: Module1.mod
Laboratorio No. 02 - Robótica Industrial Motoman MH6 y RoboDK/: README.MD
Laboratorio No. 03 - Robótica Industrial EPSON T3 401S y EPSON RC+/: README.MD
Laboratorio No. 03 - Robótica Industrial EPSON T3 401S y EPSON RC+/src/: main.prg
Laboratorio No. 04 - Robótica de Desarrollo ROS Jazzy y Turtlesim/: README.MD
Laboratorio No. 04 - Robótica de Desarrollo ROS Jazzy y Turtlesim/src/: move_turtle.py
Laboratorio No. 05 - Robótica de Desarrollo ROS Jazzy y Phantom Pincher X100/: README.MD
Laboratorio No. 05 - Robótica de Desarrollo ROS Jazzy y Phantom Pincher X100/pincher_control/: package.xml
Laboratorio No. 05 - Robótica de Desarrollo ROS Jazzy y Phantom Pincher X100/pincher_control/launch/: pincher_system.launch.py
Laboratorio No. 05 - Robótica de Desarrollo ROS Jazzy y Phantom Pincher X100/pincher_control/pincher_control/: pincher_gui.py
Laboratorio No. 05 - Robótica de Desarrollo ROS Jazzy y Phantom Pincher X100/pincher_description/: package.xml  setup.py
Laboratorio No. 05 - Robótica de Desarrollo ROS Jazzy y Phantom Pincher X100/pincher_description/rviz/: pincher.rviz
Laboratorio No. 05 - Robótica de Desarrollo ROS Jazzy y Phantom Pincher X100/pincher_description/urdf/: robot.xacro
Laboratorio No. 05 - Robótica de Desarrollo ROS Jazzy y Phantom Pincher X100/pincher_lab/: actividad04_individual.py  actividad08_secuencial.py  actividad09_interpolacion.py  actividad11_fk.py  actividad12_ik.py  actividad13_ensenanza.py  actividad14_trazado.py  pincher_lab_utils.py  poses.yaml  poses_coreografia.yaml
(+14 files in other folders)
