<?xml version="1.0"?>
<package format="3">
  <name>pincher_control</name>
  <version>0.1.0</version>
  <description>Control directo del PhantomX Pincher X100 con DynamixelSDK, GUI y publicación de JointState para ROS 2 Jazzy.</description>
  <maintainer email="pendiente@ejemplo.invalid">Curso de Robótica 2026-I</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pincher_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
