<?xml version="1.0"?>
<package format="3">
  <name>pincher_description</name>
  <version>0.1.0</version>
  <description>Modelo Xacro, mallas, configuración de RViz y launch del PhantomX Pincher X100 para ROS 2 Jazzy.</description>
  <maintainer email="pendiente@ejemplo.invalid">Curso de Robótica 2026-I</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
